# ghosts-of-departed-proofs

./: Cargo.toml  README.md
src/: lib.rs  maybe.rs  naive_ghosts.rs  non_total.rs
