[package]
name = "probability-ghosts"
version = "0.1.0"
authors = ["rrokkam <rohithrokkam@gmail.com>"]
edition = "2018"
description = "Implementations of `probability` using techniques described in the paper  'Ghosts of Departed Proofs'"
readme = "README.md"
repository = "https://github.com/rrokkam/probability-ghosts/"

[dependencies]
