[package]
name = "probability_ghosts"
version = "0.2.0"
authors = ["rrokkam <rohithrokkam@gmail.com>"]
edition = "2018"
description = "Implementations of `probability` using techniques described in the paper  'Ghosts of Departed Proofs'"
readme = "README.md"
repository = "https://github.com/rrokkam/ghosts-of-departed-proofs/"

[dependencies]
