[package]
name = "ghosts_of_departed_proofs"
version = "0.3.0"
authors = ["rrokkam <rohithrokkam@gmail.com>"]
edition = "2018"
description = "Using techniques described in the paper  'Ghosts of Departed Proofs'"
readme = "README.md"
repository = "https://github.com/rrokkam/ghosts-of-departed-proofs/"

[dependencies]
